Further java modernization updates